# EpiVar

./: .dockerignore  .gitignore  README.md  compose.yml  pyproject.toml
epivar/: import.sh  manage.py  setup.sh  start_app.sh  start_celery.sh
epivar/analyses/: admin.py  apps.py  data_models.py  forms.py  models.py  plots.py  signals.py  tasks.py  urls.py  utils.py  views.py
epivar/analyses/migrations/: 0001_initial.py  0002_alter_analysis_category_alter_analysis_parameters_and_more.py  0003_gseaanalysis_delete_analysis.py  0004_gseaanalysis_adjust_for_background.py  0005_alter_gseaanalysis_options_and_more.py  0006_gsea_loa_delete_gseaanalysis.py  0007_rename_analysis_task_gsea_task_and_more.py  0008_gsea_title_loa_title.py  0009_remove_gsea_result_file_remove_loa_result_file.py  0010_alter_gsea_correction_method_alter_gsea_submitter_and_more.py  (+26 more)
epivar/cms/: admin.py  models.py  urls.py  views.py
epivar/datasets/: admin.py  apps.py  data_models.py  models.py  tasks.py
epivar/epivar/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
epivar/ontologies/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
epivar/reference_genomes/: admin.py  apps.py  genomics.py  models.py  signals.py  urls.py  views.py
epivar/studies/: admin.py  apps.py  forms.py  models.py  plots.py  signals.py  tasks.py  urls.py  utils.py  views.py
epivar/templates/: base.html  base_study_template.html  home.html
epivar/users/: admin.py  forms.py  models.py  urls.py  views.py
images/app/: Dockerfile
images/celery_worker/: Dockerfile
nginx/: default.conf
(+82 files in other folders)
